 - Bugfix: SplitDockStation did not fire dockable removing eveng if the method "dropOver" was called
 - API: CControl offers the new method "getFocusedCDockable", which returns the currently focused CDockable or null 
 - API: Added DockFrontend.deleteAll, which quickly deletes all settings of the frontend.
 ! API: DockFrontend.readXml/read now deletes the existing settings, this is how most developers would expect the method to work.

[v1.1.1p6b]
 - API: The new interface DockActionImportanceOrder allows to define which actions are the most important actions, if there is not enough space to show all actions the most important actions stay visible a bit longer
 - API: If tabs and actions are shown, tabs are now hidden before actions are hidden
 - Bugfix: When setting the location of a Dockable "d", such that a SplitDockStation with a maximixed child needs to de-maximize its child, and if that child is a StackDockStation containing "d", and all of this is executed by a CSplitDockStationHandle: then remove "d" from its parent before resizing. Because this way the EventQueue is cleaned before AWTEvents regarding "d" are sent, allowing new Component-resize events to be actually delivered.
 - Bugfix: Removing a DockAction from a submenu did not have any effect unless the submenu was rebuilt.
 - Bugfix: A nested DropDownAction could lead to a NPE during "unbind". 
 - Bugfix/API: merged changes of Thomas. SplitDockStation should clean up wrong mouse cursor now. Improvements in the Glass-Extension.

[v1.1.1p6c]
 - Bugfix: Mainfest of "Common Layout" example was wrong.
 - Bugfix: Moving a Dockable over itself on a SplitDockStation now results in a no-op instead of moving the Dockable to the ScreenDockStation.
 - Bugfix: Using the keyboard to change the expanded-state of a CDockable no longer prints a warning about "subclasses of DockHierarchyListener should not modify hierarchy".
  
[Todo]
- Drop StackDockStation over Dockable and merge them