@@ -677,6 +677,7 @@
  - Bugfix: Mainfest of "Common Layout" example was wrong.
  - Bugfix: Moving a Dockable over itself on a SplitDockStation now results in a no-op instead of moving the Dockable to the ScreenDockStation.
  - Bugfix: Using the keyboard to change the expanded-state of a CDockable no longer prints a warning about "subclasses of DockHierarchyListener should not modify hierarchy".
+ - Bugfix: Drop behavior of SplitDockStation acted rather strangely if the mouse was outside the station. Found by Herve.
   
 [Todo]
 - Drop StackDockStation over Dockable and merge them
